--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquerys.css">
+    <script src="https://kit.fontawesome.com/94f2b04ea4.js" crossorigin="anonymous"></script>
     <title>Coffe Shop</title>
 </head>
 <body>
@@ -14,8 +16,8 @@
         <ul class="nav-links">
             <li><a href="a">Inicio</a></li>
             <li><a href="a">Nuestro Cafe</a></li>
-            <li><a href="a">Contacto</a></li>
             <li><a href="a">Trabaja con nosotros</a></li>
+            <li><a href="a">Contacto</a></li>
         </ul>
     </nav>
     </Header>
@@ -62,6 +64,88 @@
                 </ul>
             </div>
         </section>
+
+        <!--Cards-->
+
+        <section id="cards">
+            <h2 class="titulo">Trabaja con nosotros</h2>
+
+            <!--1-->
+
+            <div class="info-cards-cafe">
+
+                <div class="info-cards">
+                    <img class="imagen" src="imgcards/Barista.webp" alt="Barista.icono">
+
+                    <h3>Trabaja y aprende</h3>
+
+                    <p class="parrafo">Te brindamos la posibilidad que ademas de trabajar, al mismo tiempo, darte las herramientas necesarias para poder estudiar un curso profesional de Barista.  </p>
+                </div>
+
+            <!--2-->    
+
+                <div class="info-cards">
+                    <img class="imagen" src="imgcards/mesero.2.jpg" alt="Mesero.icono">
+
+                    <h3>Atencion al cliente</h3>
+
+                    <p class="parrafo">En este sector te encargaras de procesar pedidos y servirlos en la mesa, administrar quejas y cumplidos, procesar pagos y facturación, etc.</p>
+                </div>
+
+             <!--3-->
+
+                <div class="info-cards">
+                    <img class="imagen" src="imgcards/ult2.jpg" alt="Barista.icono">
+
+                    <h3>Armador de pedidos</h3>
+
+                    <p class="parrafo">Te encargaras de expedir mercadería del depósito o del lote de almacenamiento para abastecer los estantes, anaqueles o para preparar las órdenes de pedido de los clientes. </p>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
+
+      <!--Footer-->
+      <section id="footer">
+
+          <footer class="foot">
+
+            <div class="container">
+
+                <div class="footer-row">
+
+                    <div class="footer-links">
+                        <h2>Contacto</h2>
+                        <div class="iconos">
+                            <div class="fa-solid fa-location-dot">  Calle falsa 123 </div>
+                            <div class="fa-solid fa-phone">  4756 - 4178 </div>
+                            <div class="fa-solid fa-envelope">  CoffePlace@hotmail.com</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <!--Redes sociales-->
+
+            <div class="redes-sociales">
+                <div><i class="fa-brands fa-instagram"></i></div>
+                <div><i class="fa-brands fa-twitter"></i></div>
+                <div><i class="fa-brands fa-facebook-f"></i></div>
+            </div>
+
+        <!--cierre-->
+
+            <div class="Copy">
+                <small>&copy;2023 <b>Coffe Place</b> - Todos los derechos reservados.</small>
+            </div>
+
+          </footer>
 </body>
 </html>
